--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -15,7 +15,7 @@ scrape_configs:
   - job_name: "node_exporter"
     scrape_interval: 5s
     static_configs:
-      - targets: ["{{ groups["cluster"] | join(':9100", "')}}:9100"]
+      - targets: ["192.168.1.8:9100"]
 
 rule_files:
   - "{{ prometheus_rule_path }}/*"
