--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -16,6 +16,7 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ["192.168.1.8:9100"]
+      - targets: ['192.168.1.11:9100']
 
 rule_files:
   - "{{ prometheus_rule_path }}/*"
