--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -16,7 +16,14 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ["192.168.1.8:9100"]
-      - targets: ['192.168.1.11:9100']
+      - targets: ["192.168.1.11:9100"]
+
+  - job_name: 'tower'
+    metrics_path: /api/v2/metrics
+    scrape_interval: 5s
+    static_configs:
+    - targets:
+        - ["192.168.1.8"]
 
 rule_files:
   - "{{ prometheus_rule_path }}/*"
