--- a/monitoring/templates/datasource.json.j2
+++ b/monitoring/templates/datasource.json.j2
@@ -1,11 +1,9 @@
 {
-  "id": 1,
-  "name": "{{ grafana_datasource_name }}",
-  "type": "{{ grafana_datasource_type }}",
+  "name":"Prometheus",
+  "type":"prometheus",
   "url": "{{ grafana_datasource_url_protocol }}://{{ grafana_datasource_url }}",
-  "access": "proxy",
-  "basicAuth": {{ grafana_datasource_basicauth }},
-  "basicAuthUser": "{{ grafana_datasource_basicauth_user }}",
-  "basicAuthPassword": "{{ grafana_datasource_basicauth_password }}",
-  "isDefault": {{ grafana_datasource_default }}
+  "access":"proxy",
+  "basicAuth":false
 }
+
+
