--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -12,10 +12,15 @@ global:
 
 # A list of scrape configurations.
 scrape_configs:
-  - job_name: "node_exporter"
+  - job_name: "tower-01"
     scrape_interval: 5s
     static_configs:
       - targets: ["192.168.1.8:9100"]
+
+  - job_name: "tower-01"
+    scrape_interval: 5s
+    static_configs:
+      - targets: ["192.168.11:9100"]
 
   - job_name: 'tower'
     metrics_path: /api/v2/metrics
@@ -25,6 +30,15 @@ scrape_configs:
     static_configs:
     - targets: ["192.168.1.8"]  
         
-
 rule_files:
   - "{{ prometheus_rule_path }}/*"
+
+alerting:
+  alertmanagers:
+  - static_configs:
+    - targets:
+    {% for host in groups['alertmanager'] %}
+    {% if inventory_hostname != host %}
+      - '{{ host }}:9093'
+    {% endif %}
+    {% endfor %}
