--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -12,10 +12,15 @@ global:
 
 # A list of scrape configurations.
 scrape_configs:
-  - job_name: "tower-01"
+  - job_name: 'node_exporter'
     scrape_interval: 5s
     static_configs:
-      - targets: ["192.168.1.8:9100"]
+      - targets:
+      {% for host in groups['cluster'] %}
+      {% if inventory_hostname != host %}
+        - '{{ host }}:9100'
+      {% endif %}
+      {% endfor %}
 
   - job_name: 'tower'
     metrics_path: /api/v2/metrics
