--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -15,12 +15,7 @@ scrape_configs:
   - job_name: 'node_exporter'
     scrape_interval: 5s
     static_configs:
-      - targets:
-      {% for host in groups['cluster:children'] %}
-      {% if inventory_hostname != host %}
-        - '{{ host }}:9100'
-      {% endif %}
-      {% endfor %}
+      - targets:  ["{{ groups["cluster:children"] | join(':9100", "')}}:9100"]
 
   - job_name: 'tower'
     metrics_path: /api/v2/metrics
