--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -31,9 +31,5 @@ rule_files:
 alerting:
   alertmanagers:
   - static_configs:
-    - targets:
-    {% for host in groups['master'] %}
-    {% if inventory_hostname != host %}
-      - '{{ host }}:9093'
-    {% endif %}
-    {% endfor %}
+    - targets: ["{{ groups["cluster:children"] | join(':9093", "')}}:9093"]
+    
