--- a/monitoring/templates/alertmanager.cfg.yml.j2
+++ b/monitoring/templates/alertmanager.cfg.yml.j2
@@ -47,7 +47,7 @@ receivers:
 - name: slack
   slack_configs:
   - api_url: https://hooks.slack.com/services/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
-    channel: "#iota"
+    channel: "#geral"
     send_resolved: true
     title: "[Alert] {{ .GroupLabels.alertname }}"
     text: "summary: {{ .CommonAnnotations.summary }}\ndescription: {{ .CommonAnnotations.description }}"
