--- a/monitoring/templates/alertmanager.cfg.yml.j2
+++ b/monitoring/templates/alertmanager.cfg.yml.j2
@@ -1,47 +1,10 @@
 ---
 global:
-  #smtp_smarthost: {{ smtp_host }}:{{ smtp_port }}
-  #smtp_from: {{ alertmanager_email_from }}@{{ ansible_hostname }}
-  # For gmail this is required to be true
-  # and for any other ssl encrypted port
-  #smtp_require_tls: false
-  #pagerduty_url: ''
-  #hipchat_api_url: ''
-  #opsgenie_api_url: ''
-  #wechat_api_url: ''
-  #victorops_api_url: ''
+  resolve_timeout: 5m
 route:
   group_by: [Alertname]
   repeat_interval: 1h
-  receiver: email-me
-
-# Templates directory
-#templates:
-#  - {{ alertmanager_basedir }}/template/*.tmpl
-
-receivers:
-# Send using postfix local mailer
-# You can send to a gmail or hotmail address
-# but these will most probably be put into junkmail
-# unles you configure your DNS and the from address
-#- name: email-me
-#  email_configs:
-#  - to: {{ alertmanager_email_to }}
-#    from: {{ alertmanager_email_from }}@{{ ansible_hostname }}
-#    html: {% raw %}'{{ template "email.tmpl" . }}'{% endraw %}
-
-#    smarthost: {{ smtp_host }}:{{ smtp_port }}
-#    send_resolved: true
-
-# For gmail, replace the variables/placeholders with your data
-#- name: email-me
-#  email_configs:
-#  - to: $GMAIL_ACCOUNT
-#    from: $GMAIL_ACCOUNT
-#    smarthost: smtp.gmail.com:587
-#    auth_username: "$GMAIL_ACCOUNT"
-#    auth_identity: "$GMAIL_ACCOUNT"
-#    auth_password: "$GMAIL_AUTH_TOKEN"
+  receiver: slack-notifications
 
 # For slack notifications, replace the variables/placeholders with your data
 - name: slack
