--- a/monitoring/templates/alertmanager.cfg.yml.j2
+++ b/monitoring/templates/alertmanager.cfg.yml.j2
@@ -2,23 +2,25 @@
 global:
   resolve_timeout: 5m
 route:
-  group_by: [Alertname]
-  repeat_interval: 1h
+  group_by:
+    - cluster
+    - alertname
+  group_wait: 30s
+  group_interval: 5m
+  repeat_interval: 12h
   receiver: slack-notifications
+  routes:
+    - receiver: slack-notifications
+      match:
+        severity: warning
+receivers:
+  - name: slack-notifications
+    slack_configs:
+     - channel: "#general"
+       send_resolved: true
+       api_url:'https://hooks.slack.com/services/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'
+       title: "[Alert] {{ .GroupLabels.alertname }}"
+       text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
 
-# For slack notifications, replace the variables/placeholders with your data
-- name: slack
-  slack_configs:
-  - api_url: https://hooks.slack.com/services/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
-    channel: "#geral"
-    send_resolved: true
-    title: "[Alert] {{ .GroupLabels.alertname }}"
-    text: "summary: {{ .CommonAnnotations.summary }}\ndescription: {{ .CommonAnnotations.description }}"
 
-inhibit_rules:
-- source_match:
-    severity: critical
-  target_match:
-    severity: warning
-  equal:
-  - Alertname
+  
