--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -32,8 +32,4 @@ alerting:
   alertmanagers:
   - static_configs:
     - targets:
-    {% for host in groups['cluster:children'] %}
-    {% if inventory_hostname != host %}
-      - '{{ host }}:9093'
-    {% endif %}
-    {% endfor %}
+      - alertmanager:9093
