--- a/monitoring/templates/prometheus.yml.j2
+++ b/monitoring/templates/prometheus.yml.j2
@@ -12,10 +12,25 @@ global:
 
 # A list of scrape configurations.
 scrape_configs:
-  - job_name: "node_exporter"
+  - job_name: 'node_exporter'
     scrape_interval: 5s
     static_configs:
       - targets: ["{{ groups["cluster:children"] | join(':9100", "')}}:9100"]
 
+  - job_name: 'tower'
+    metrics_path: /api/v2/metrics
+    scrape_interval: 5s
+    scheme: http
+    bearer_token: U8cahTFXJASsaaVvK0mBBjHjR1pNyS
+    static_configs:
+    - targets: ["192.168.1.8"]  
+        
 rule_files:
   - "{{ prometheus_rule_path }}/*"
+
+alerting:
+  alertmanagers:
+    - scheme: http
+      static_configs:
+      - targets:
+        - targets: ["{{ groups["cluster:children"] | join(':9093", "')}}:9093"]
